server/captenserver_vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: server-envoy-capten
  namespace: intelops
spec:
  gateways:
  - istio-system/intelops-gateway
  hosts:
  - captenenvoy.alpha.optimizor.app
  http:
  - corsPolicy:
      allowCredentials: true
      allowHeaders:
      - '*'
      allowMethods:
      - GET
      - OPTIONS
      - PUT
      - DELETE
      - POST
      allowOrigins:
      - regex: .*
    route:
    - destination:
        host: capten-server
        port:
          number: 8081
    timeout: 30s
